MikTeX 21.3; passing tests without font packages; microtype package

--- a/templates/book-hdtv.tex
+++ b/templates/book-hdtv.tex
@@ -1,15 +1,15 @@
 % !TEX TS-program = arara
 % arara: xelatex: { synctex: on, options: [-halt-on-error] } 
-% arara: biber
-% arara: texindy: { markup: xelatex }
-% arara: makeglossaries
-% arara: xelatex: { synctex: on, options: [-interaction=batchmode, -halt-on-error] }
-% arara: xelatex: { synctex: on, options: [-interaction=batchmode, -halt-on-error]  }
-% arara: clean: { extensions: [ aux, log, out, run.xml, ptc, toc, mw, synctex.gz, ] }
-% arara: clean: { extensions: [ bbl, bcf, blg, ] }
-% arara: clean: { extensions: [ glg, glo, gls, ] }
-% arara: clean: { extensions: [ idx, ilg, ind, xdy, ] }
-% arara: clean: { extensions: [ plCode, plData, plMath, plExercise, plNote, plQuote, ] }
+% % arara: biber
+% % arara: texindy: { markup: xelatex }
+% % arara: makeglossaries
+% % arara: xelatex: { synctex: on, options: [-interaction=batchmode, -halt-on-error] }
+% % arara: xelatex: { synctex: on, options: [-interaction=batchmode, -halt-on-error]  }
+% % arara: clean: { extensions: [ aux, log, out, run.xml, ptc, toc, mw, synctex.gz, ] }
+% % arara: clean: { extensions: [ bbl, bcf, blg, ] }
+% % arara: clean: { extensions: [ glg, glo, gls, ] }
+% % arara: clean: { extensions: [ idx, ilg, ind, xdy, ] }
+% % arara: clean: { extensions: [ plCode, plData, plMath, plExercise, plNote, plQuote, ] }
 %-----------------------------------------------------------------
 \documentclass{PalisadesLakesBook}
 %\geomLegal
@@ -34,7 +34,7 @@
 %\PagellaFonts
 %\ScholaFonts
 %\TermesFonts
-%\XITSFonts
+\XITSFonts
 
 %-----------------------------------------------------------------
 \title{Book template}
