--- a/templates/report-hdtv.tex
+++ b/templates/report-hdtv.tex
@@ -5,11 +5,11 @@
 %% arara: makeglossaries
 % arara: xelatex: { synctex: on, options: [-interaction=batchmode, -halt-on-error] }
 % arara: xelatex: { synctex: on, options: [-interaction=batchmode, -halt-on-error]  }
-% arara: clean: { extensions: [ aux, log, out, run.xml, ptc, toc, mw, synctex.gz, ] }
-% arara: clean: { extensions: [ bbl, bcf, blg, ] }
-%% arara: clean: { extensions: [ glg, glo, gls, ] }
-% arara: clean: { extensions: [ idx, ilg, ind, xdy, ] }
-% arara: clean: { extensions: [ plCode, plData, plMath, plExercise, plNote, plQuote, ] }
+% % arara: clean: { extensions: [ aux, log, out, run.xml, ptc, toc, mw, synctex.gz, ] }
+% % arara: clean: { extensions: [ bbl, bcf, blg, ] }
+% %% arara: clean: { extensions: [ glg, glo, gls, ] }
+% % arara: clean: { extensions: [ idx, ilg, ind, xdy, ] }
+% % arara: clean: { extensions: [ plCode, plData, plMath, plExercise, plNote, plQuote, ] }
 %-----------------------------------------------------------------
 \documentclass[11pt]{PalisadesLakesReport}
 %\geomLegal
@@ -23,10 +23,10 @@
 %\EBGaramondFonts % fewest pages
 %\ErewhonFonts
 %\FiraFonts % tall lines, all sans, much less per page, missing \in?
-%\GFSNeohellenicFonts 
+\GFSNeohellenicFonts 
 %\KpFonts
 %\LatinModernFonts
-\LegibleFonts
+%\LegibleFonts
 %\LibertinusFonts
 %\NewComputerModernFonts
 %\STIXTwoFonts
