--- a/tests/chunks.tex
+++ b/tests/chunks.tex
@@ -1,6 +1,6 @@
 % !TEX TS-program = arara
 % arara: xelatex: { synctex: on, options: [-halt-on-error] } 
-% arara: biber
+% % arara: biber
 %% arara: texindy: { markup: xelatex }
 %% arara: makeglossaries
 % % arara: xelatex: { synctex: on, options: [-interaction=batchmode, -halt-on-error] }
@@ -11,7 +11,7 @@
 % % arara: clean: { extensions: [ idx, ilg, ind, xdy, ] }
 % % arara: clean: { extensions: [ plCode, plData, plMath, plExercise, plNote, plQuote, ] }
 %----------------------------------------------------------------
-\documentclass{PalisadesLakesArticle}
+\documentclass{PalisadesLakesBook}
 
 %\geomLegal
 %\geomLedger
