rough textbook geoemtry

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -2074,7 +2074,7 @@ for constructive, predicative and classical analysis.},
   year    = {2020},
 }
 
-@Articlew{Ihaka:2010:RLessons,
+@Article{Ihaka:2010:RLessons,
   author  = {Ross Ihaka},
   journal = {Joint Statistical Meetings},
   pages   = {5669--5673},
@@ -2628,6 +2628,15 @@ the accuracy of the intermediate evaluations.},
   numpages   = {8},
   publisher  = {Academic Press},
   year       = {2012},
+}
+
+@online{Levien:2021:FittingBezier,
+author = {Raph Levien},
+title={Fitting cubic Bézier curves},
+year = {2021},
+month={March},
+day={11},
+url = {https://raphlinus.github.io/curves/2021/03/11/bezier-fitting.html},
 }
 
 @Article{LiPionYap:2004:ExactGeomComp,
