--- a/shared/feferman.tex
+++ b/shared/feferman.tex
@@ -245,20 +245,22 @@ from applications.
 
 \end{plSection}%{Working foundations 1991}
 %-----------------------------------------------------------------
-\begin{plSection}{(7) Reflective expansion of concepts and principles}
+\begin{plSection}{Reflective expansion of concepts and principles}
 
 Mentions, but does not explain, the difference 
 in constructive mathematics between
 ``the idea of a function as given by a \textit{rule}
 \ldots [and] \ldots the idea of a set as given by a 
-\textit{defining property}. \citeAuthorYearTitle{Feferman:1979:ConstructiveFunctionsClasses}
+\textit{defining property}. 
+\citeAuthorYearTitle{Feferman:1979:ConstructiveFunctionsClasses}
 
-\end{plSection}%{(7) Reflective expansion of concepts and principles}
+\end{plSection}%{Reflective expansion of concepts and principles}
 %-----------------------------------------------------------------
 \begin{plSection}{\Godel's life and work}
 \label{sec:Godels_life_and_work}
 
-\citeAuthorYearTitle[ch~6 ``\Godel's life and work'']{Feferman:1998:LightOfLogic}
+\citeAuthorYearTitle[ch~6 ``\Godel's life and work'']{
+Feferman:1998:LightOfLogic}
 
 \end{plSection}%{\Godel's life and work}
 %-----------------------------------------------------------------
@@ -284,7 +286,10 @@ B, and so [is a] \ldots statement \ldots in some other
 language''.~\cite[p~157]{Feferman:1998:LightOfLogic}
 
 \Godel refers to 
-Tarski \citeAuthorYearTitle{Tarski1944:SemanticTruth,Tarski:1983:LogicEtc} 
+Tarski 
+\citeAuthorYearTitle{
+Tarski1944:SemanticTruth,
+Tarski:1983:LogicEtc} 
 for justification in 1965 version 
 of this work. \citeAuthorYearTitle{Godel:1986:CollectedWorksI}
  
