fix contents line

--- a/tests/fonts.tex
+++ b/tests/fonts.tex
@@ -59,7 +59,7 @@ shape: #2\\
 %-----------------------------------------------------------------
 \begin{document}
 %\maketitle
-%\PalisadesLakesTableOfContents
+%\PalisadesLakesTableOfContents{7}
 %-----------------------------------------------------------------
 \def\sharedFolder{../shared/}
 
