--- a/tests/math.tex
+++ b/tests/math.tex
@@ -43,7 +43,7 @@
 %-----------------------------------------------------------------
 \begin{document}
 %\maketitle
-%\PalisadesLakesTableOfContents
+%\PalisadesLakesTableOfContents{7}
 %-----------------------------------------------------------------
 \def\sharedFolder{../shared/}
 
