more refs; EBGaramond fonts scaling; update typesetting,tex

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -980,6 +980,13 @@ refine cortical organization.},
   year        = {1989},
 }
 
+@online{Devroye:2014:Noordzij,
+author={Luc Devroye},
+title={Gerrit Noordzij},
+year = {2014?},
+url={http://luc.devroye.org/fonts-24699.html},
+}
+
 @Article{Diez:2002:Constructivism,
   author  = {Díez, Gustavo},
   title   = {The Logic of Constructivism},
@@ -3267,6 +3274,14 @@ The paper closes with some philosophical remarks.},
   year     = {1992},
 }
 
+@online{Middendorp:2019:Noordzij,
+author={Jan Middendorp},
+title={It all starts with writing:
+An influential following of {Gerrit Noordzij}},
+year={2019},
+url={https://www.typemag.org/post/it-all-starts-with-writing-gerrit-noordzij},
+}
+
 @Article{MillerEtal:1991:SIGGRAPH,
   author  = {J.V. Miller and D.E. Breen and W.E. Lorensen and R.M. O'Bara and M.J. Wozny},
   title   = {Geometrically Deformed Models: A Method for Extracting Closed Geometric Models from Volume Data},
@@ -3715,22 +3730,42 @@ and no access to mantissa or exponent is necessary.
   year    = {1967},
 }
 
-@mastersthesis{Rhatigan:2007:GinaPractice,
+@thesis{Rhatigan:2007:GinaPractice,
 author={Daniel Rhatigan},
 title = {{Gina}: reflection on practice},
 year={2007},
+type={Essay for {MA} in {Type Design}},
 institution = {University of Reading},
-url={http://ultrasparky.org/school/pdf/DanielRhatigan_Dissertation.pdf},
+url={http://ultrasparky.org/school/pdf/DanielRhatigan_RoP.pdf},
 }
 
-@mastersthesis{Rhatigan:2007:MathTypefaces,
+@thesis{Rhatigan:2007:GinaSpecimen,
+author={Daniel Rhatigan},
+title = {Hello, I'd like you to meet {Gina}},
+year={2007},
+institution = {University of Reading},
+type={Font Specimen for {MA} in {Type Design}},
+url={http://ultrasparky.org/school/pdf/DanielRhatigan_Gina_specimen.pdf},
+}
+
+@thesis{Rhatigan:2007:MathTypefaces,
 author={Daniel Rhatigan},
 title = {Three typefaces for a mathematics:
 the development of {Times 4-line Mathematics Series 569},
 {AMS Euler}, and {Cambria Math}},
 year={2007},
 institution = {University of Reading},
+type={Dissertation for {MA} in {Type Design}},
 url={http://ultrasparky.org/school/pdf/DanielRhatigan_Dissertation.pdf},
+}
+
+@thesis{Rhatigan:2007:Monotype4Line,
+author={Daniel Rhatigan},
+title = {The {Monotype} 4-line system for setting mathematics},
+year={2007},
+institution = {University of Reading},
+type={Essay for {MA} in {Type Design}},
+url={http://ultrasparky.org/school/pdf/Rhatigan_Monotype_4-line_math.pdf},
 }
 
 @Article{Richman:1996:Logic,
