mth typesetting refs; cjk support

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -753,6 +753,19 @@ stage of the programming process.},
   year    = {1983},
 }
 
+@book{ChaundyBarrettBatey:1954:PrintingMathematics,
+title={The printing of
+mathematics:
+aids for
+authors and editors
+and rules for
+compositors and readers at the
+University Press, Oxford},
+author={T. W. Chaundy and P. R. Barrett and Charles Batey},
+publisher={Oxford University P},
+year={1954},
+}
+
 @Online{Cheng:2020:Latest,
   author = {Eugenia Cheng},
   title  = {Latest Books},
@@ -2637,6 +2650,15 @@ the accuracy of the intermediate evaluations.},
   year       = {2012},
 }
 
+@book{LetourneauSharp:2017:AMSStyleGuide,
+title={{AMS} Style Guide Journals},
+year={2017},
+month={October},
+author={Mary Letourneau and Jennifer Wright Sharp},
+publisher={American Mathematical Society},
+url={http://www.ams.org/arc/styleguide/index.html},
+}
+
 @online{Levien:2021:FittingBezier,
 author = {Raph Levien},
 title={Fitting cubic Bézier curves},
@@ -3827,6 +3849,21 @@ both kinds of numbers in a single system are considered.},
   year    = {2000},
 }
 
+@article{RoddTornqkvist:2009:LMSStyleGuide,
+author={Sue Rodd and Ola T\"{o}rnkvist},
+title={Journals of the London Mathematical Society: house style and
+instructions for copy-editors and typesetters},
+journal={Proceedings of the London Mathematical Society},
+volume=3,
+year={2009},
+pages={1-–33},
+abstract={This style guide is directed to editors, typesetters 
+and proofreaders who are preparing papers
+for publication in the Bulletin, Journal and
+Proceedings of the London Mathematical Society},
+url={https://www.lms.ac.uk/sites/lms.ac.uk/files/Publications/LMSHouseStyle.pdf},
+}
+
 @Article{Rosenbrock:1960:Minimization,
   author  = {H. H. Rosenbrock},
   title   = {An automatic method for finding the greatest or least value of a function},
@@ -4186,6 +4223,15 @@ note = { Transcript at
   url       = {https://www.elsevier.com/books/oriented-projective-geometry/stolfi/978-0-12-672025-9},
   address   = {Boston, {MA}},
   year      = {1991},
+}
+
+@book{Swanson:1999:MathIntoType,
+author={Ellen Swanson and Arlene {O'Sean} and Antoinette Schleyer},
+title={Mathematics into Type},
+year={1999},
+edition={Updated},
+publisher={American Mathematical Society},
+url={http://www.ams.org/arc/styleguide/mit-2.pdf},
 }
 
 @Article{SzeliskiTonnesen:1992:OrientedParticles,
