--- a/tex/latex/PalisadesLakes/typesetting.tex
+++ b/tex/latex/PalisadesLakes/typesetting.tex
@@ -1,14 +1,17 @@
 %-----------------------------------------------------------------
 \begin{plSection}{Typesetting this document}
 
-This document was typeset using Mik\TeX{} $21.3$ \cite{Schenk:2017:Miktex} 
+This document was typeset using Mik\TeX{} $21.3$ 
+\cite{Schenk:2017:Miktex} 
 and {\TeX}works $0.6.5$ \cite{KewLoffler:2017:Texworks} 
 on \textsc{Windows} $10$. 
 I used \texttt{arara} \cite{CeredaEtAl:2021:Arara} 
-to run \texttt{xelatex}, \texttt{biber}, \texttt{makeglossaries},  and
+to run \texttt{xelatex}, \texttt{biber}, \texttt{makeglossaries},  
+and
 \texttt{texindy: { markup: xelatex }}.
 I believe only Mik\TeX\  and {\TeX}works are Windows specific; 
-the actual typesetting tools should be usable on Linux and MacOS as well.
+the actual typesetting tools should be usable on Linux and MacOS 
+as well.
 
 See also \cite{Talbot:2012:LatexNovices,Talbot:2013:LatexPhD}.
 
@@ -51,7 +54,9 @@ and believe should be restricted, if used at all, to placing
 emphasis on very short pieces of text, on the order of a word
 or short phrase.
 And even in that case, and contrary to most
-advice I've seen, I prefer slanted faces to italic.
+advice I've seen, I prefer slanted faces to italic
+(one agreeing opinion, for text at least: 
+\citeAuthorYearTitle{RoddTornqkvist:2009:LMSStyleGuide}.
 My subjective feeling is that italic text,
 in most fonts, is read more-or-less single letter at a time,
 rather than word or phrase at a time. I think the same applies
