--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -3487,6 +3487,15 @@ RawFeature={
 ]
 }
 
+%%-----------------------------------------------------------------
+% cjk fonts
+%-----------------------------------------------------------------
+% TODO: what's the 'right' way to do CJK as of 2021?
+\RequirePackage{xeCJK}[2020-02-19]
+%\defaultCJKfontfeatures {⟨font features⟩}
+\setCJKmainfont{NotoSansCJK.ttc}
+\setCJKsansfont{NotoSansCJK.ttc}
+\setCJKmonofont{NotoSansCJK.ttc}
 %-----------------------------------------------------------------
 % font 'families' 
 % attempt at harmonius main, sans, mono, math fonts
@@ -3675,14 +3684,6 @@ RawFeature={
 % \DeclareRobustCommand{\ubseries}{\fontseries{ub}\selectfont}
 % \DeclareTextFontCommand{\textub}{\ubseries}
 
-%-----------------------------------------------------------------
-% cjk fonts
-%-----------------------------------------------------------------
-% TODO: what's the 'right' way to do CJK as of 2021?
-% \usepackage{xeCJK}
-% \setCJKmainfont{SimHei}
-% \setCJKsansfont{SimHei}
-% \setCJKmonofont{Lucida Sans Typewriter}
 %-----------------------------------------------------------------
 % math packages
 %-----------------------------------------------------------------
